{
  "version": 4,
  "terraform_version": "1.1.2",
  "serial": 51,
  "lineage": "a5024b1e-7654-608d-28d1-7f7455453a77",
  "resources": [
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_lb",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:loadbalancer/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db",
            "arn_suffix": "app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db",
            "dns_name": "useful-piranha-tfe-web-alb-1753913486.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:467368121379:loadbalancer/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "useful-piranha-tfe-web-alb",
            "security_groups": [
              "sg-06a70ad9c9ec883eb",
              "sg-08e3ec6b9edc7a4ed"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-0b6c05c6fab657c78"
              },
              {
                "subnet_id": "subnet-0cc9738f092be1ba7"
              },
              {
                "subnet_id": "subnet-0d99496cc0077c828"
              }
            ],
            "subnets": [
              "subnet-0b6c05c6fab657c78",
              "subnet-0cc9738f092be1ba7",
              "subnet-0d99496cc0077c828"
            ],
            "tags": {
              "Name": "useful-piranha-tfe-alb"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-alb"
            },
            "vpc_id": "vpc-0186472bb01a51414",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "module.tfe.aws_security_group.alb_egress_allow",
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:listener/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db/2f9298e56370a0bf",
            "certificate_arn": "arn:aws:acm:us-west-2:467368121379:certificate/31742d24-125b-4ba8-a1b2-117053fa23b5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-443/e0dc39621666dfb4",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:467368121379:listener/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db/2f9298e56370a0bf",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:loadbalancer/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db",
            "port": 443,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.tfe",
            "module.tfe.aws_acm_certificate.cert",
            "module.tfe.aws_lb.alb",
            "module.tfe.aws_lb_target_group.alb_443",
            "module.tfe.aws_security_group.alb_egress_allow",
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "alb_8800",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:listener/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db/304eeba80594dc06",
            "certificate_arn": "arn:aws:acm:us-west-2:467368121379:certificate/31742d24-125b-4ba8-a1b2-117053fa23b5",
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-8800/43ce08e561e4a1ee",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:467368121379:listener/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db/304eeba80594dc06",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:loadbalancer/app/useful-piranha-tfe-web-alb/a39ec2f2c0b3e2db",
            "port": 8800,
            "protocol": "HTTPS",
            "ssl_policy": "ELBSecurityPolicy-2016-08",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "data.aws_acm_certificate.tfe",
            "module.tfe.aws_acm_certificate.cert",
            "module.tfe.aws_lb.alb",
            "module.tfe.aws_lb_target_group.alb_8800",
            "module.tfe.aws_security_group.alb_egress_allow",
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_443",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-443/e0dc39621666dfb4",
            "arn_suffix": "targetgroup/useful-piranha-tfe-alb-tg-443/e0dc39621666dfb4",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200",
                "path": "/_health_check",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 7
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-443/e0dc39621666dfb4",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "useful-piranha-tfe-alb-tg-443",
            "port": 443,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Description": "ALB Target Group for TFE web application HTTPS traffic",
              "Name": "useful-piranha-tfe-alb-tg-443"
            },
            "tags_all": {
              "Description": "ALB Target Group for TFE web application HTTPS traffic",
              "Name": "useful-piranha-tfe-alb-tg-443"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "alb_8800",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-8800/43ce08e561e4a1ee",
            "arn_suffix": "targetgroup/useful-piranha-tfe-alb-tg-8800/43ce08e561e4a1ee",
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 30,
                "matcher": "200-399",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTPS",
                "timeout": 5,
                "unhealthy_threshold": 7
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:467368121379:targetgroup/useful-piranha-tfe-alb-tg-8800/43ce08e561e4a1ee",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "useful-piranha-tfe-alb-tg-8800",
            "port": 8800,
            "protocol": "HTTPS",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Description": "ALB Target Group for TFE/Replicated web admin console traffic over port 8800",
              "Name": "useful-piranha-tfe-alb-tg-8800"
            },
            "tags_all": {
              "Description": "ALB Target Group for TFE/Replicated web admin console traffic over port 8800",
              "Name": "useful-piranha-tfe-alb-tg-8800"
            },
            "target_type": "instance",
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_egress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:security-group/sg-06a70ad9c9ec883eb",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-06a70ad9c9ec883eb",
            "ingress": [],
            "name": "useful-piranha-tfe-alb-egress-allow",
            "name_prefix": "",
            "owner_id": "467368121379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useful-piranha-tfe-alb-egress-allow"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-alb-egress-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb_ingress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:security-group/sg-08e3ec6b9edc7a4ed",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08e3ec6b9edc7a4ed",
            "ingress": [],
            "name": "useful-piranha-tfe-lb-allow",
            "name_prefix": "",
            "owner_id": "467368121379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useful-piranha-tfe-lb-allow"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-lb-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_egress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:security-group/sg-0297bf2bd7f322772",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0297bf2bd7f322772",
            "ingress": [],
            "name": "useful-piranha-tfe-ec2-egress-allow",
            "name_prefix": "",
            "owner_id": "467368121379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useful-piranha-tfe-egress-allow"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-egress-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ec2_ingress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:security-group/sg-0a7fdeab3e7529e64",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0a7fdeab3e7529e64",
            "ingress": [],
            "name": "useful-piranha-tfe-ec2-ingress-allow",
            "name_prefix": "",
            "owner_id": "467368121379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useful-piranha-tfe-ec2-ingress-allow"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-ec2-ingress-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "rds_ingress_allow",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:security-group/sg-02c5b587e8b6c7095",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-02c5b587e8b6c7095",
            "ingress": [],
            "name": "useful-piranha-tfe-rds-ingress-allow",
            "name_prefix": "",
            "owner_id": "467368121379",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "useful-piranha-tfe-rds-allow"
            },
            "tags_all": {
              "Name": "useful-piranha-tfe-rds-allow"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_egress_allow_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic outbound from the ALB",
            "from_port": 0,
            "id": "sgrule-3999753922",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-06a70ad9c9ec883eb",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.alb_egress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_allow_console",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow admin console (port 8800) traffic inbound to TFE LB for TFE Replicated admin console",
            "from_port": 8800,
            "id": "sgrule-1718710416",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e3ec6b9edc7a4ed",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8800,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "alb_ingress_allow_https",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow HTTPS (port 443) traffic inbound to TFE LB",
            "from_port": 443,
            "id": "sgrule-3739573467",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08e3ec6b9edc7a4ed",
            "self": false,
            "source_security_group_id": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow all traffic egress from TFE",
            "from_port": 0,
            "id": "sgrule-2542703149",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0297bf2bd7f322772",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.ec2_egress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_allow_console_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow admin console (port 8800) traffic inbound to TFE EC2 instance from TFE LB",
            "from_port": 8800,
            "id": "sgrule-3897766002",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7fdeab3e7529e64",
            "self": false,
            "source_security_group_id": "sg-08e3ec6b9edc7a4ed",
            "to_port": 8800,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.tfe.aws_security_group.ec2_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_allow_https_from_lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow HTTPS (port 443) traffic inbound to TFE EC2 instance from TFE LB",
            "from_port": 443,
            "id": "sgrule-3350740996",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7fdeab3e7529e64",
            "self": false,
            "source_security_group_id": "sg-08e3ec6b9edc7a4ed",
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.alb_ingress_allow",
            "module.tfe.aws_security_group.ec2_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "ec2_ingress_allow_ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow SSH inbound to TFE EC2 instance CIDR ranges listed",
            "from_port": 22,
            "id": "sgrule-533935784",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0a7fdeab3e7529e64",
            "self": false,
            "source_security_group_id": null,
            "to_port": 22,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.ec2_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.tfe",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "rds_ingress_allow_from_ec2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow PostgreSQL traffic inbound to TFE RDS from TFE EC2 Security Group",
            "from_port": 5432,
            "id": "sgrule-4236376096",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-02c5b587e8b6c7095",
            "self": false,
            "source_security_group_id": "sg-0a7fdeab3e7529e64",
            "to_port": 5432,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.tfe.aws_security_group.ec2_ingress_allow",
            "module.tfe.aws_security_group.rds_ingress_allow",
            "module.vpc.aws_vpc.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_eip",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d2a2b1d2b2a6c51",
            "domain": "vpc",
            "id": "eipalloc-07d2a2b1d2b2a6c51",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-44-224-88-255.us-west-2.compute.amazonaws.com",
            "public_ip": "44.224.88.255",
            "public_ipv4_pool": "amazon",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "vpc": true
          }
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:internet-gateway/igw-01ffe1d8f75b052b7",
            "id": "igw-01ffe1d8f75b052b7",
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-07d2a2b1d2b2a6c51",
            "connectivity_type": "public",
            "id": "nat-09454ca830fda2102",
            "network_interface_id": "eni-08a944984946fb24f",
            "private_ip": "10.0.101.231",
            "public_ip": "44.224.88.255",
            "subnet_id": "subnet-0cc9738f092be1ba7",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-us-west-2a",
              "Terraform": "true"
            }
          },
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "private_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0a356cad98cc02a2e1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-09454ca830fda2102",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a356cad98cc02a2e",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_eip.nat",
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_nat_gateway.this",
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route",
      "name": "public_internet_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-01ffe1d8f75b052b7",
            "id": "r-rtb-0a57db37d53705aec1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "route_table_id": "rtb-0a57db37d53705aec",
            "state": "active",
            "timeouts": {
              "create": "5m",
              "delete": null,
              "update": null
            },
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_internet_gateway.this",
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:route-table/rtb-0a356cad98cc02a2e",
            "id": "rtb-0a356cad98cc02a2e",
            "owner_id": "467368121379",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:route-table/rtb-0a57db37d53705aec",
            "id": "rtb-0a57db37d53705aec",
            "owner_id": "467368121379",
            "propagating_vgws": [],
            "route": [],
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public",
              "Terraform": "true"
            },
            "timeouts": null,
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83c43ae6c1ca700",
            "route_table_id": "rtb-0a356cad98cc02a2e",
            "subnet_id": "subnet-024c69b1a11bb356d"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0a1cddc0821c3962c",
            "route_table_id": "rtb-0a356cad98cc02a2e",
            "subnet_id": "subnet-09aae00e51b180d74"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-095f17f8ba6099432",
            "route_table_id": "rtb-0a356cad98cc02a2e",
            "subnet_id": "subnet-025266198052356d3"
          },
          "dependencies": [
            "module.vpc.aws_route_table.private",
            "module.vpc.aws_subnet.private",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f4c38517258246cf",
            "route_table_id": "rtb-0a57db37d53705aec",
            "subnet_id": "subnet-0cc9738f092be1ba7"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0f1559a9aba8bb8f1",
            "route_table_id": "rtb-0a57db37d53705aec",
            "subnet_id": "subnet-0d99496cc0077c828"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b3f8093c7659b360",
            "route_table_id": "rtb-0a57db37d53705aec",
            "subnet_id": "subnet-0b6c05c6fab657c78"
          },
          "dependencies": [
            "module.vpc.aws_route_table.public",
            "module.vpc.aws_subnet.public",
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-024c69b1a11bb356d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.1.0/24",
            "id": "subnet-024c69b1a11bb356d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-09aae00e51b180d74",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.2.0/24",
            "id": "subnet-09aae00e51b180d74",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-025266198052356d3",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.3.0/24",
            "id": "subnet-025266198052356d3",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-private-us-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-0cc9738f092be1ba7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.0.101.0/24",
            "id": "subnet-0cc9738f092be1ba7",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2a",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-0d99496cc0077c828",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.0.102.0/24",
            "id": "subnet-0d99496cc0077c828",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2b",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:subnet/subnet-0b6c05c6fab657c78",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2c",
            "availability_zone_id": "usw2-az3",
            "cidr_block": "10.0.103.0/24",
            "id": "subnet-0b6c05c6fab657c78",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2c",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc-public-us-west-2c",
              "Terraform": "true"
            },
            "vpc_id": "vpc-0186472bb01a51414"
          },
          "dependencies": [
            "module.vpc.aws_vpc.this",
            "module.vpc.aws_vpc_ipv4_cidr_block_association.this"
          ]
        }
      ]
    },
    {
      "module": "module.vpc",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "this",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:467368121379:vpc/vpc-0186472bb01a51414",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-017b755240825e3c4",
            "default_route_table_id": "rtb-0349a3ce9792e7866",
            "default_security_group_id": "sg-041423f233b1763bd",
            "dhcp_options_id": "dopt-077f7ab4808b4f6e5",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0186472bb01a51414",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0349a3ce9792e7866",
            "owner_id": "467368121379",
            "tags": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            },
            "tags_all": {
              "Environment": "dev",
              "Name": "my-vpc",
              "Terraform": "true"
            }
          }
        }
      ]
    }
  ]
}